# sachima

./: .gitignore  AGENTS.md  GOAL.md  cli.py  pyproject.toml  run_agent.py  toolsets.py
agent/: agent_init.py  agent_runtime_helpers.py  auxiliary_client.py  context_compressor.py  conversation_loop.py  image_gen_provider.py  prompt_builder.py  tool_executor.py  tts_registry.py  turn_context.py
docs/: sachima-channel.md  sachima-final-goal-gap-analysis.md
gateway/: authz_mixin.py  config.py  delivery_state.py  display_config.py  flowweaver_agent_execution_activity.py  flowweaver_ai_flow_pilot.py  flowweaver_contract.py  flowweaver_controlled_gateway_observation.py  flowweaver_delivery_activity.py  flowweaver_delivery_agent_execution_contract.py  flowweaver_live_gateway_observation_enablement.py  run.py  (+27 more)
prototypes/flowweaver_phase5b_temporal_poc/: README.md  pyproject.toml
prototypes/flowweaver_phase5b_temporal_poc/src/flowweaver_temporal_poc/: __init__.py  activities.py  client.py  payloads.py  workflows.py
prototypes/flowweaver_phase5c_runtime_client/: README.md  pyproject.toml
prototypes/flowweaver_phase5c_runtime_client/src/flowweaver_runtime_client/: __init__.py  contracts.py  control_surface.py  controlled_gateway_observation_design.py  controlled_shadow_design.py  controlled_shadow_prototype_loop.py  gateway_ack_shadow_bridge.py  gateway_shadow_e2e_loop.py  live_gateway_observation_enablement_design.py  mcp_control_server.py  mcp_server.py  production_readiness_gate.py  publication_adapter.py  reconciliation_harness.py  runtime_client.py  tool_adapter.py
(+675 files in other folders)
