[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowweaver-temporal-poc"
version = "0.0.0"
description = "Local-only FlowWeaver Phase 5B Temporal proof of concept"
requires-python = ">=3.11"
dependencies = ["temporalio>=1.27.0,<2"]

[tool.setuptools.packages.find]
where = ["src"]
