[project]
name = "flowweaver-phase5c-runtime-client"
version = "0.1.0"
description = "Prototype-only FlowWeaver runtime client and MCP adapter for Phase 5C."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
temporal = ["temporalio>=1.27.0,<2"]
mcp = ["mcp>=1.2.0,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
